--- a/todo-list-app/package.json
+++ b/todo-list-app/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://francisChigozie.github.io/todo-list-app",
 "name": "todo-list-app",
   "version": "0.1.0",
   "private": true,
@@ -12,7 +13,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "deploy": "npm run build",
+    "predeploy" : "npm run build",
+    "deploy": "gh-pages -d builds",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
