--- a/todo-list-app/package.json
+++ b/todo-list-app/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "http://francisChigozie.github.io/todo-list-app",
 "name": "todo-list-app",
   "version": "0.1.0",
   "private": true,
@@ -13,8 +12,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "predeploy" : "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy" : "npm run build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
