--- a/todo-list-app/package.json
+++ b/todo-list-app/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://francischigozie.github.io/todo-list-app",
 "name": "todo-list-app",
   "version": "0.1.0",
   "private": true,
@@ -11,8 +12,9 @@
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
-  "scripts": {
-    "deploy" : "npm run build",
+    "scripts": {
+    "predeploy": "npm run build",
+    "deploy" : "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
