--- a/todo-list-app/package.json
+++ b/todo-list-app/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://francischigozie.github.io/todo-list-app",
+  "homepage": "http://francischigozie.github.io/todo-list-app",
 "name": "todo-list-app",
   "version": "0.1.0",
   "private": true,
